--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "babylonjs": "^4.2.0",
-    "node-poweredup": "^6.9.0"
+    "node-poweredup": "6.7.0"
   },
   "devDependencies": {
     "electron": "^11.1.1",
     "electron-rebuild": "^2.3.4",
-    "typescript": "^4.1.3"
+    "typescript": "^3.9.5"
   }
 }
