--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.61",
     "@electron-forge/maker-zip": "^6.0.0-beta.61",
     "electron": "^11.5.0",
-    "electron-rebuild": "2.3.5",
+    "electron-rebuild": "^2.3.5",
     "typescript": "^3.9.10"
   },
   "config": {
