--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "electron-forge start",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tsc && electron-forge start -- --simulation",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
