fix for bottom tilt values

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "*": ["node_modules/*"]
       },
       "types": [
+        "@debenben/node-poweredup",
         "babylonjs",
         "babylonjs-gui"
       ]
