--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babyele",
-  "version": "0.5.5",
+  "version": "0.5.6",
   "description": "program to control lego walker",
   "main": "./app/main.js",
   "scripts": {
@@ -16,8 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@debenben/node-poweredup": "^9.0.3",
-    "babylonjs": "^5.33.1",
-    "babylonjs-gui": "^5.33.1",
+    "babylonjs": "5.35.1",
+    "babylonjs-gui": "5.35.1",
     "electron-squirrel-startup": "^1.0.0",
     "ml-matrix": "^6.10.4"
   },
@@ -27,7 +27,7 @@
     "@electron-forge/maker-rpm": "^6.0.0",
     "@electron-forge/maker-squirrel": "^6.0.0",
     "@electron-forge/maker-zip": "^6.0.0",
-    "electron": "^22.0.0",
+    "electron": "^23.1.1",
     "@electron/rebuild": "^3.2.5",
     "typescript": "^4.8.4"
   },
