--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babyele",
-  "version": "0.5.7",
+  "version": "0.5.8",
   "description": "program to control lego walker",
   "main": "./app/main.js",
   "scripts": {
@@ -27,8 +27,8 @@
     "@electron-forge/maker-rpm": "^6.0.0",
     "@electron-forge/maker-squirrel": "^6.0.0",
     "@electron-forge/maker-zip": "^6.0.0",
-    "electron": "^23.1.1",
-    "@electron/rebuild": "^3.2.5",
+    "electron": "^24.1.2",
+    "@electron/rebuild": "3.2.10",
     "typescript": "^4.8.4"
   },
   "config": {
