--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@debenben/node-poweredup": "^9.0.3",
-    "babylonjs": "5.51.0",
-    "babylonjs-gui": "5.51.0",
+    "babylonjs": "^6.2.0",
+    "babylonjs-gui": "^6.2.0",
     "electron-squirrel-startup": "^1.0.0",
     "ml-matrix": "^6.10.4"
   },
@@ -29,7 +29,7 @@
     "@electron-forge/maker-zip": "^6.0.0",
     "electron": "^24.1.2",
     "@electron/rebuild": "3.2.10",
-    "typescript": "^4.8.4"
+    "typescript": "^5.0.4"
   },
   "config": {
     "forge": {
