--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@debenben/node-poweredup": "^9.0.3",
+    "@abandonware/bluetooth-hci-socket": "^0.5.3-12",
     "babylonjs": "6.19.1",
     "babylonjs-gui": "6.19.1",
     "babylonjs-loaders": "6.19.1",
@@ -27,7 +28,7 @@
     "@electron-forge/maker-rpm": "^7.2.0",
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
-    "electron": "^28.0.0",
+    "electron": "^29.3.0",
     "@electron/rebuild": "^3.6.0",
     "typescript": "^5.0.4",
     "eslint": "^8.0.1",
