--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "dependencies": {
     "@debenben/node-poweredup": "^9.0.3",
     "@abandonware/bluetooth-hci-socket": "^0.5.3-12",
-    "babylonjs": "6.19.1",
-    "babylonjs-gui": "6.19.1",
-    "babylonjs-loaders": "6.19.1",
+    "babylonjs": "^7.2.2",
+    "babylonjs-gui": "^7.2.2",
+    "babylonjs-loaders": "^7.2.2",
     "ml-matrix": "^6.10.4"
   },
   "devDependencies": {
