--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && electron-rebuild",
     "configure": "sudo setcap cap_net_raw+eip ./node_modules/electron/dist/electron && sudo bash -c 'echo $(pwd)/node_modules/electron/dist > /etc/ld.so.conf.d/electron-node.conf' && sudo bash -c 'chown root:root $(pwd)/node_modules/electron/dist/chrome-sandbox && chmod 4755 $(pwd)/node_modules/electron/dist/chrome-sandbox'",
     "start": "tsc && electron-forge start",
-    "test": "tsc && electron-forge start -- --simulation --poweredup",
+    "test": "tsc && electron-forge start -- --simulation",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
